traces/bug_892.txt
src/fflib/lgfem.cpp:4426: error: DEAD_STORE
  The value written to &plotting (type _Bool) is never used.
Showing all 1 steps of the trace


src/fflib/lgfem.cpp:4426:10: Write of unused value
4424.   		       break;
4425.   		   case 'p' : 
4426.   		       plotting=true;
                 ^
4427.   		       reffecran();
4428.   		       ops=true;
